--- a/beist/beist-ui/src/styles/css/style.css
+++ b/beist/beist-ui/src/styles/css/style.css
@@ -8,26 +8,23 @@
 
 .padTop10Class {
     padding-top: 10%;
-
 }
 
 .padTop5Class {
     padding-top: 5%;
 }
 
-.padBot10Class {
-    padding-bottom: 10%;
+.padTop3Class {
+    padding-top: 3%;
 }
 
-.padBot3Class {
-    padding-bottom: 3%;
+.padTop2Class {
+    padding-top: 2%;
 }
-
-
 
 .indexBody {
     padding-top: 18%;
-    padding-bottom: 28%;
+    padding-bottom: 23.5%;
     padding-left: 10%;
     padding-right: 10%;
     text-align: center;
