--- a/beist/beist-ui/src/styles/css/style.css
+++ b/beist/beist-ui/src/styles/css/style.css
@@ -34,6 +34,10 @@
     float: right;
 }
 
+.verMiddle {
+    vertical-align: middle;
+}
+
 .indexBody {
     padding-top: 18%;
     padding-bottom: 23.5%;
